# csad_test

./: CMakeLists.txt  README.md
.github/workflows/: superlinter.yml  test.yml
SW_Task2/: SW_Task2.sln
SW_Task2/SW_Task2/: SW_Task2.vcxproj
ci/: build.ps1  build.sh  test.ps1  test.sh  test_output.txt
docs/: КІ401_Осадчук_task1.docx
src/HW_task2/: HW_task2.ino
src/HW_task2/SW2_task2/: SW2_task2.sln
src/HW_task2/SW2_task2/SW2_task2/: SW2_task2.cpp  (+2 more)
src/SW_Task2/: CMakeLists.txt
src/SW_Task2/SW_Task2/: SW_Task2.vcxproj  SW_Task2.vcxproj.filters  client.cpp  hw_mock.h
src/SW_Task2/SW_Task2/x64/Debug/: SW_Task2.exe.recipe  SW_Task2.ilk  vc143.idb
src/SW_Task2/SW_Task2/x64/Debug/SW_Task2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SW_Task2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/test_serial_communication/: CMakeLists.txt  test_serial_communication.sln
tests/test_serial_communication/test_serial_communication/: pseudo_serial.h  test.cpp  test_serial_communication.vcxproj
tests/test_serial_communication/test_serial_communication/x64/Debug/: test_serial_communication.exe.recipe  test_serial_communication.vcxproj.FileListAbsolute.txt
tests/test_serial_communication/test_serial_communication/x64/Debug/test_ser.3b9f7c5b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_serial_communication.lastbuildstate
(+18 files in other folders)
